# AVH-SystemModeling

./: .gitignore  README.md
EchoCanceller/: EchoCanceller.Demo.cprj  EchoCanceller.MainApp.cprj  EchoCanceller.mo  EchoCanceller.uvoptx  EchoCanceller.uvprojx  README.md  fvp_config.txt  packlist  rir_nearsource_mic1.csv  rir_nearsource_mic2.csv  rir_speaker_mic1.csv  rir_speaker_mic2.csv  roomTransferFunction.py
EchoCanceller/BuildC/: README.md  analyze.py  buildAndRun.sh  clean.sh  echoLinux.mos  echoWindow.mos  noEchoLinux.mos  params.py  run.bat  run.sh
EchoCanceller/Documentation/: BLOG.md  BUILDANDRUN.md  DEMO.md  ImplementationDetails.md  QUICKSTART.md  README.md
EchoCanceller/RTE/Compiler/: EventRecorderConf.h
EchoCanceller/RTE/Compute/: RingConfig.h
EchoCanceller/RTE/Machine_Learning/: system_setup.cc
EchoCanceller/RTE/_MainApp/: Pre_Include_Global.h  RTE_Components.h
EchoCanceller/RTE/_OrtaEchoCanceller.SDFTest/: Pre_Include_Global.h  RTE_Components.h
EchoCanceller/RTE/_SDFTest/: Pre_Include_Global.h  RTE_Components.h
EchoCanceller/RTE/_Target_1/: Pre_Include_Global.h  RTE_Components.h
EchoCanceller/VSI/: README.md
EchoCanceller/VSI/include/: arm_vsi.h
EchoCanceller/audiodriver/: AudioConfig.h  AudioInterrupt.cpp  audio_drv.c  audio_drv.h
EchoCanceller/microspeech/: README.md  command_responder.cc  command_responder.h  main_functions.cc  main_functions.h  recognize_commands.cc  recognize_commands.h
EchoCanceller/microspeech/nodes/: clampNode.h  mfccNode.h  tfliteNode.h  windowNode.h
EchoCanceller/sources/: AppNodes.h  custom.h  graph.py  main.c  main.h  process.c  process.h  retarget_stdio.c  schedconfig.h  scheduleinit.c  scheduler.cpp  scheduler.h  test.dot
EchoCanceller/speexdsp/: README.md  _speexdsp_kiss_fft_guts.h  arch.h  config.h  fftwrap.c  fftwrap.h  mdf.c  os_support.h  os_support_custom.h  speexdsp_kiss_fft.c  speexdsp_kiss_fft.h  speexdsp_kiss_fftr.c  speexdsp_kiss_fftr.h
VHTModelicaBlock/: .gitignore  CMakeLists.txt  README.md  TestWave.mo  fir.c  main.c  model.c  wave.c
VHTModelicaBlock/ARM/: FIR.mo  Models.mo  Sound.mo  Types.mo  package.mo  package.order
VHTModelicaBlock/ARM/Resources/Include/: fir.h  model.h  wave.h
VHTModelicaBlock/buildLinux/: clean.sh  test.sh
VHTModelicaBlock/buildWin/: clean.bat  run.bat  test.bat
VHTModelicaBlock/testscripts/: message.py  runclients.py
(+15 files in other folders)
